fix menu overflow

--- a/css/site.styl
+++ b/css/site.styl
@@ -370,7 +370,7 @@ p.wp-caption-text
 
 .sub-menu 
   display: none
-  overflow-y: scroll
+  overflow-y: auto
   position: absolute
   padding-top: $margin-large
   background-color: $color-black-soft
